--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ anyhow = "1.0"
 num-bigint = "0.4.4"
 num-traits = "0.2.17"
 once_cell = "1.19.0"
+ruint = "1.11.1"
 uniswap-sdk-core-rust = "0.4.0"
 uniswap_v3_math = "0.4.1"
 
@@ -22,4 +23,8 @@ criterion = "0.5.1"
 
 [[bench]]
 name = "bit_math"
+harness = false
+
+[[bench]]
+name = "tick_math"
 harness = false
