--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "uniswap-v3-sdk-rs"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -15,7 +15,7 @@ num-bigint = "0.4.4"
 num-traits = "0.2.17"
 once_cell = "1.19.0"
 ruint = "1.11.1"
-uniswap-sdk-core-rust = "0.4.0"
+uniswap-sdk-core-rust = { git = "https://github.com/malik672/uniswap-sdk-core-rust", branch = "master" }
 uniswap_v3_math = "0.4.1"
 
 [dev-dependencies]
