Implement compute_swap_step function and add benchmarks
Added the compute_swap_step function in src/utils/swap_math.rs that calculates result of swapping given parameters. Also added new benchmark tests for this function under benches/swap_math.rs and updated the version in Cargo.toml to 0.3.0. The compute_swap_step function helps in computing swap steps more efficiently in the codebase.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "uniswap-v3-sdk-rs"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -20,6 +20,7 @@ uniswap_v3_math = "0.4.1"
 
 [dev-dependencies]
 criterion = "0.5.1"
+ethers-core = "2.0.11"
 
 [[bench]]
 name = "bit_math"
@@ -27,6 +28,10 @@ harness = false
 
 [[bench]]
 name = "sqrt_price_math"
+harness = false
+
+[[bench]]
+name = "swap_math"
 harness = false
 
 [[bench]]
