--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "uniswap-v3-sdk-rs"
-version = "0.5.0"
+version = "0.6.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -11,17 +11,19 @@ alloy-json-abi = "0.5.4"
 alloy-primitives = "0.5.4"
 alloy-sol-types = "0.5.4"
 anyhow = "1.0"
+aperture-lens = { git = "https://github.com/Aperture-Finance/Aperture-Lens", branch = "main" }
+ethers = { version = "2.0", features = ["default"] }
 num-bigint = "0.4.4"
 num-traits = "0.2.17"
 once_cell = "1.19.0"
 ruint = "1.11.1"
 thiserror = "1.0.53"
-uniswap-sdk-core-rust = { git = "https://github.com/malik672/uniswap-sdk-core-rust", branch = "master" }
+uniswap-sdk-core = { git = "https://github.com/malik672/uniswap-sdk-core-rust", branch = "master" }
 uniswap_v3_math = "0.4.1"
 
 [dev-dependencies]
 criterion = "0.5.1"
-ethers-core = "2.0.11"
+tokio = { version = "1.35", features = ["full"] }
 
 [[bench]]
 name = "bit_math"
