Refactor uniswap-v3-sdk-rs to uniswap-v3-sdk and enhance package info
This commit updates the project identity from 'uniswap-v3-sdk-rs' to 'uniswap-v3-sdk'. It includes enhancing package information by providing a new description, author details, and inserting the MIT license.
Also, the codebase has been updated in various places to reflect this change in identity. GitHub workflow names has been simplified too. The 'cargo clippy' and 'cargo fmt' commands were updated for thorough checking.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
-name = "uniswap-v3-sdk-rs"
-version = "0.6.0"
+name = "uniswap-v3-sdk"
+version = "0.6.1"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+authors = ["Shuhui Luo <twitter.com/aureliano_law>"]
+description = "Uniswap v3 SDK for Rust"
+license = "MIT"
 
 [dependencies]
 alloy-dyn-abi = "0.5.4"
