--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,12 @@ name = "uniswap-v3-sdk"
 version = "0.7.0"
 edition = "2021"
 authors = ["Shuhui Luo <twitter.com/aureliano_law>"]
-description = "Uniswap v3 SDK for Rust"
+description = "Uniswap V3 SDK for Rust"
 license = "MIT"
+readme = "README.md"
+repository = "https://github.com/shuhuiluo/uniswap-v3-sdk-rs"
+keywords = ["uniswap-v3", "ethereum", "rust", "sdk"]
+exclude = [".github", ".gitignore", "rustfmt.toml"]
 
 [dependencies]
 alloy-dyn-abi = "0.5.4"
@@ -12,14 +16,14 @@ alloy-json-abi = "0.5.4"
 alloy-primitives = "0.5.4"
 alloy-sol-types = "0.5.4"
 anyhow = "1.0"
-aperture-lens = { git = "https://github.com/Aperture-Finance/Aperture-Lens", branch = "main" }
+#aperture-lens = { git = "https://github.com/Aperture-Finance/Aperture-Lens", branch = "main" }
 ethers = { version = "2.0", features = ["default"] }
 num-bigint = "0.4.4"
 num-traits = "0.2.17"
 once_cell = "1.19.0"
 ruint = "1.11.1"
 thiserror = "1.0.53"
-uniswap-sdk-core = { git = "https://github.com/malik672/uniswap-sdk-core-rust", branch = "master" }
+uniswap-sdk-core = "0.6.1"
 uniswap_v3_math = "0.4.1"
 
 [dev-dependencies]
