--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ alloy-json-abi = "0.5.4"
 alloy-primitives = "0.5.4"
 alloy-sol-types = "0.5.4"
 anyhow = "1.0"
-#aperture-lens = { git = "https://github.com/Aperture-Finance/Aperture-Lens", tag = "v0.4.0" }
+aperture-lens = "0.4.0"
 ethers = { version = "2.0", features = ["default"] }
 num-bigint = "0.4.4"
 num-integer = "0.1.45"
