--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ alloy-primitives = "0.5.4"
 alloy-sol-types = "0.5.4"
 anyhow = "1.0"
 aperture-lens = "0.4.0"
-ethers = { version = "2.0", features = ["default"] }
+ethers = "2.0"
 num-bigint = "0.4.4"
 num-integer = "0.1.45"
 num-traits = "0.2.17"
