--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -31,7 +31,7 @@ jobs:
             ${{ runner.os }}-cargo-registry-
 
       - name: Build
-        run: cargo build
+        run: cargo build --all-features
 
       - name: Run tests
-        run: cargo test
+        run: cargo test --all-features
