--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "uniswap-v3-sdk"
-version = "0.8.2"
+version = "0.9.0"
 edition = "2021"
 authors = ["Shuhui Luo <twitter.com/aureliano_law>"]
 description = "Uniswap V3 SDK for Rust"
@@ -10,12 +10,15 @@ repository = "https://github.com/shuhuiluo/uniswap-v3-sdk-rs"
 keywords = ["uniswap-v3", "ethereum", "rust", "sdk"]
 exclude = [".github", ".gitignore", "rustfmt.toml"]
 
+[package.metadata.docs.rs]
+all-features = true
+
 [dependencies]
 alloy-primitives = "0.5.4"
 alloy-sol-types = "0.5.4"
 anyhow = "1.0"
-aperture-lens = "0.4.0"
-ethers = "2.0"
+aperture-lens = { version = "0.4.0", optional = true }
+ethers = { version = "2.0", optional = true }
 num-bigint = "0.4.4"
 num-integer = "0.1.45"
 num-traits = "0.2.17"
@@ -24,6 +27,9 @@ ruint = "1.11.1"
 thiserror = "1.0.53"
 uniswap-sdk-core = "0.7.0"
 uniswap_v3_math = "0.4.1"
+
+[features]
+extensions = ["aperture-lens", "ethers"]
 
 [dev-dependencies]
 criterion = "0.5.1"
