Add 'regex' to features in Cargo.toml
The 'regex' utility has been added to the 'extensions' feature in the Cargo.toml file. This extension will be used for extended price and tick conversion utilities and parsing price strings into 'Price' instances. This update also involves necessary code refactoring and version updates.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ uniswap-sdk-core = "0.10.0"
 uniswap_v3_math = "0.4.1"
 
 [features]
-extensions = ["aperture-lens", "ethers"]
+extensions = ["aperture-lens", "ethers", "regex"]
 
 [dev-dependencies]
 criterion = "0.5.1"
