--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ alloy-primitives = "0.6"
 alloy-sol-types = "0.6"
 anyhow = "1.0"
 aperture-lens = { version = "0.4", optional = true }
+base64 = { version = "0.21.7", optional = true }
 bigdecimal = "0.4.2"
 ethers = { version = "2.0", optional = true }
 num-bigint = "0.4.4"
@@ -26,12 +27,13 @@ num-traits = "0.2.17"
 once_cell = "1.19"
 regex = { version = "1.10", optional = true }
 ruint = "1.11"
+serde_json = { version = "1.0", optional = true }
 thiserror = "1.0"
 uniswap-sdk-core = "0.11.0"
 uniswap_v3_math = "0.4.1"
 
 [features]
-extensions = ["aperture-lens", "ethers", "regex"]
+extensions = ["aperture-lens", "base64", "ethers", "regex", "serde_json"]
 
 [dev-dependencies]
 criterion = "0.5.1"
