Rearrange derive attributes and simplify default implementation
The order of derive attributes has been rearranged to align with the standard convention across different structures in the code. Also, the default implementation in the get_fee_growth_inside.rs file has been simplified by applying the derive attribute for Default. These changes improve code consistency and readability.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ description = "Uniswap V3 SDK for Rust"
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/shuhuiluo/uniswap-v3-sdk-rs"
-keywords = ["uniswap-v3", "ethereum", "rust", "sdk"]
+keywords = ["uniswap-v3", "ethereum", "sdk"]
 exclude = [".github", ".gitignore", "rustfmt.toml"]
 
 [package.metadata.docs.rs]
