--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "uniswap-v3-sdk"
-version = "0.29.0"
+version = "0.29.1"
 edition = "2021"
 authors = ["Shuhui Luo <twitter.com/aureliano_law>"]
 description = "Uniswap V3 SDK for Rust"
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/shuhuiluo/uniswap-v3-sdk-rs"
-keywords = ["uniswap-v3", "ethereum", "rust", "sdk"]
+keywords = ["uniswap-v3", "ethereum", "sdk"]
 exclude = [".github", ".gitignore", "rustfmt.toml"]
 
 [package.metadata.docs.rs]
