chore: Refactor code and update dependencies
Modified various invocations and calculations to remove unnecessary conversions to ethers, yielding better clarity and performance. Adjusted test cases to adapt these changes. Updated dependencies to recent versions. Extended the test coverage to contain not only the core library but also extensions. Lastly, configured use of API key for accessing Ethereum Mainnet via Infura, ensuring this key is not committed into the repository.

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -8,6 +8,7 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
+  INFURA_API_KEY: ${{ secrets.INFURA_API_KEY }}
 
 jobs:
   lint:
@@ -59,5 +60,7 @@ jobs:
             ${{ runner.os }}-cargo-registry-
       - name: Build
         run: cargo build --all-features
-      - name: Run tests
-        run: cargo test --all-features
+      - name: Run tests for core library
+        run: cargo test
+      - name: Run tests for extensions
+        run: cargo test --all-features --lib extensions -- --test-threads=1
