--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "uniswap-v3-sdk"
-version = "0.30.0"
+version = "0.31.0"
 edition = "2021"
 authors = ["Shuhui Luo <twitter.com/aureliano_law>"]
 description = "Uniswap V3 SDK for Rust"
@@ -14,23 +14,23 @@ exclude = [".github", ".gitignore", "rustfmt.toml"]
 all-features = true
 
 [dependencies]
-alloy-primitives = "0.7.6"
-alloy-sol-types = "0.7.6"
+alloy-primitives = "0.7"
+alloy-sol-types = "0.7"
 anyhow = "1.0"
 aperture-lens = { version = "0.4", optional = true }
 base64 = { version = "0.22", optional = true }
-bigdecimal = "0.4.2"
+bigdecimal = "0.4.5"
 ethers = { version = "2.0", optional = true }
 ethers-core = "2.0"
-num-bigint = "0.4.4"
-num-integer = "0.1.45"
-num-traits = "0.2.17"
+num-bigint = "0.4"
+num-integer = "0.1"
+num-traits = "0.2"
 once_cell = "1.19"
 regex = { version = "1.10", optional = true }
 ruint = "1.12"
 serde_json = { version = "1.0", optional = true }
 thiserror = "1.0"
-uniswap-sdk-core = "0.23.0"
+uniswap-sdk-core = { version = "1.0.0-rc", features = ["std"] }
 uniswap_v3_math = "0.5.1"
 
 [features]
