--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "uniswap-v3-sdk"
-version = "0.31.0"
+version = "0.32.0"
 edition = "2021"
 authors = ["Shuhui Luo <twitter.com/aureliano_law>"]
 description = "Uniswap V3 SDK for Rust"
@@ -27,14 +27,16 @@ num-integer = "0.1"
 num-traits = "0.2"
 once_cell = "1.19"
 regex = { version = "1.10", optional = true }
-ruint = "1.12"
+rustc-hash = "2.0"
 serde_json = { version = "1.0", optional = true }
-thiserror = "1.0"
+thiserror = { version = "1.0", optional = true }
 uniswap-sdk-core = { version = "1.0.0-rc", features = ["std"] }
 uniswap_v3_math = "0.5.1"
 
 [features]
+default = []
 extensions = ["aperture-lens", "base64", "ethers", "regex", "serde_json"]
+std = ["thiserror", "uniswap-sdk-core/std"]
 
 [dev-dependencies]
 criterion = "0.5.1"
