--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "uniswap-v3-sdk"
-version = "0.32.0"
+version = "0.33.0"
 edition = "2021"
 authors = ["Shuhui Luo <twitter.com/aureliano_law>"]
 description = "Uniswap V3 SDK for Rust"
@@ -30,7 +30,7 @@ regex = { version = "1.10", optional = true }
 rustc-hash = "2.0"
 serde_json = { version = "1.0", optional = true }
 thiserror = { version = "1.0", optional = true }
-uniswap-sdk-core = { version = "1.0.0-rc", features = ["std"] }
+uniswap-sdk-core = { version = "=1.0.0", features = ["std"] }
 uniswap_v3_math = "0.5.1"
 
 [features]
