--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "uniswap-v3-sdk"
-version = "0.33.0"
+version = "0.34.0"
 edition = "2021"
 authors = ["Shuhui Luo <twitter.com/aureliano_law>"]
 description = "Uniswap V3 SDK for Rust"
@@ -14,8 +14,8 @@ exclude = [".github", ".gitignore", "rustfmt.toml"]
 all-features = true
 
 [dependencies]
-alloy-primitives = "0.7"
-alloy-sol-types = "0.7"
+alloy-primitives = "0.8"
+alloy-sol-types = "0.8"
 anyhow = "1.0"
 aperture-lens = { version = "0.4", optional = true }
 base64 = { version = "0.22", optional = true }
@@ -30,7 +30,7 @@ regex = { version = "1.10", optional = true }
 rustc-hash = "2.0"
 serde_json = { version = "1.0", optional = true }
 thiserror = { version = "1.0", optional = true }
-uniswap-sdk-core = { version = "=1.0.0", features = ["std"] }
+uniswap-sdk-core = { version = "1.1.0", features = ["std"] }
 uniswap_v3_math = "0.5.1"
 
 [features]
