--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,8 @@ all-features = true
 alloy-primitives = "0.8"
 alloy-sol-types = "0.8"
 anyhow = "1.0"
-aperture-lens = { version = "0.4", optional = true }
 base64 = { version = "0.22", optional = true }
 bigdecimal = "0.4.5"
-ethers = { version = "2.0", optional = true }
 ethers-core = "2.0"
 num-bigint = "0.4"
 num-integer = "0.1"
@@ -30,12 +28,12 @@ regex = { version = "1.10", optional = true }
 rustc-hash = "2.0"
 serde_json = { version = "1.0", optional = true }
 thiserror = { version = "1.0", optional = true }
+#uniswap-lens = "0.2"
 uniswap-sdk-core = { version = "1.1.0", features = ["std"] }
-uniswap_v3_math = "0.5.1"
 
 [features]
-default = []
-extensions = ["aperture-lens", "base64", "ethers", "regex", "serde_json"]
+default = ["std"]
+extensions = ["base64", "regex", "serde_json"]
 std = ["thiserror", "uniswap-sdk-core/std"]
 
 [dev-dependencies]
@@ -43,6 +41,7 @@ criterion = "0.5.1"
 dotenv = "0.15.0"
 ethers = "2.0"
 tokio = { version = "1.37", features = ["full"] }
+uniswap_v3_math = "0.5.1"
 
 [[bench]]
 name = "bit_math"
