Refactor error handling and support `no_std`
Simplified error handling by removing the `anyhow` crate and using a custom `Error` enum throughout the code. Enabled support for `no_std` by making adjustments in error handling and adjusting imports. These changes improve the clarity of the code and make it more suitable for environments that do not support the standard library.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ uniswap-lens = "0.2.0"
 uniswap-sdk-core = "1.1.0"
 
 [features]
-default = ["std"]
+default = []
 extensions = ["base64", "regex", "serde_json"]
 std = ["thiserror", "uniswap-sdk-core/std"]
 
