--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "uniswap-v3-sdk"
-version = "0.34.0"
+version = "0.35.0"
 edition = "2021"
 authors = ["Shuhui Luo <twitter.com/aureliano_law>"]
 description = "Uniswap V3 SDK for Rust"
@@ -14,6 +14,7 @@ exclude = [".github", ".gitignore", "rustfmt.toml"]
 all-features = true
 
 [dependencies]
+alloy = { version = "0.3", optional = true, features = ["contract"] }
 alloy-primitives = "0.8"
 alloy-sol-types = "0.8"
 anyhow = "1.0"
@@ -27,12 +28,12 @@ regex = { version = "1.10", optional = true }
 rustc-hash = "2.0"
 serde_json = { version = "1.0", optional = true }
 thiserror = { version = "1.0", optional = true }
-uniswap-lens = "0.2.0"
+uniswap-lens = { version = "0.2.1", optional = true }
 uniswap-sdk-core = "1.1.0"
 
 [features]
 default = []
-extensions = ["base64", "regex", "serde_json"]
+extensions = ["uniswap-lens/std", "alloy", "base64", "regex", "serde_json"]
 std = ["thiserror", "uniswap-sdk-core/std"]
 
 [dev-dependencies]
