--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "uniswap-v3-sdk"
-version = "0.36.0"
+version = "0.37.0"
 edition = "2021"
 authors = ["Shuhui Luo <twitter.com/aureliano_law>"]
 description = "Uniswap V3 SDK for Rust"
@@ -17,7 +17,7 @@ all-features = true
 alloy = { version = "0.3.1", optional = true, features = ["contract"] }
 alloy-primitives = "0.8"
 alloy-sol-types = "0.8"
-anyhow = "1.0"
+anyhow = { version = "1.0", optional = true }
 base64 = { version = "0.22", optional = true }
 bigdecimal = "0.4.5"
 num-bigint = "0.4"
@@ -33,7 +33,7 @@ uniswap-sdk-core = "2.1.0"
 
 [features]
 default = []
-extensions = ["uniswap-lens/std", "alloy", "base64", "regex", "serde_json"]
+extensions = ["uniswap-lens/std", "alloy", "anyhow", "base64", "regex", "serde_json"]
 std = ["thiserror", "uniswap-sdk-core/std"]
 
 [dev-dependencies]
