perf: refactor `Trade` methods (#102)
* perf: refactor `Trade` methods

Refactored `input_amount` and `output_amount` methods to use `Fraction` for cleaner and more efficient code. Improved heuristic algorithm in functions handling pool exclusions during trade computations. Added `#[repr(u32)]` and `#[allow(non_camel_case_types)]` attributes to `FeeAmount` enum and updated crate version to `2.4.1`.

* Update Cargo.toml

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

* Refactor trade pool iteration logic

Updated loops in trade.rs to use `enumerate()` for better clarity. Changed pool exclusion to utilize `take` and `skip` for more concise and readable code. These adjustments improve code readability and maintainability.

---------

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "uniswap-v3-sdk"
-version = "2.4.0"
+version = "2.4.1"
 edition = "2021"
 authors = ["Shuhui Luo <twitter.com/aureliano_law>"]
 description = "Uniswap V3 SDK for Rust"
@@ -34,8 +34,8 @@ uniswap-sdk-core = "3.0.0"
 
 [features]
 default = []
-extensions = ["uniswap-lens/std", "alloy", "anyhow", "base64", "regex", "serde_json"]
-std = ["thiserror", "uniswap-sdk-core/std"]
+extensions = ["alloy", "anyhow", "base64", "regex", "serde_json", "uniswap-lens"]
+std = ["alloy?/std", "thiserror", "uniswap-sdk-core/std", "uniswap-lens?/std"]
 
 [dev-dependencies]
 alloy-signer = "0.5"
