--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "uniswap-v3-sdk"
-version = "2.4.1"
+version = "2.5.0"
 edition = "2021"
 authors = ["Shuhui Luo <twitter.com/aureliano_law>"]
 description = "Uniswap V3 SDK for Rust"
@@ -28,14 +28,14 @@ once_cell = "1.20"
 regex = { version = "1.11", optional = true }
 rustc-hash = "2.0"
 serde_json = { version = "1.0", optional = true }
-thiserror = { version = "1.0", optional = true }
-uniswap-lens = { version = "0.5", optional = true }
-uniswap-sdk-core = "3.0.0"
+thiserror = { version = "2", default-features = false }
+uniswap-lens = { version = "0.6", optional = true }
+uniswap-sdk-core = "3.1.0"
 
 [features]
 default = []
 extensions = ["alloy", "anyhow", "base64", "regex", "serde_json", "uniswap-lens"]
-std = ["alloy?/std", "thiserror", "uniswap-sdk-core/std", "uniswap-lens?/std"]
+std = ["alloy?/std", "thiserror/std", "uniswap-sdk-core/std", "uniswap-lens?/std"]
 
 [dev-dependencies]
 alloy-signer = "0.5"
