--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -65,3 +65,5 @@ jobs:
         run: cargo test --features std
       - name: Run tests for extensions
         run: cargo test --features extensions --lib extensions -- --test-threads=1
+      - name: Run doc tests
+        run: cargo test --doc --all-features
