doc: add example and documentation for pool creation with tick data
This commit introduces an example demonstrating how to create a pool with a tick map data provider and simulates a swap in the README. Additionally, it includes documentation for the `from_pool_key_with_tick_data_provider` method in the codebase, enhancing clarity for developers utilizing the pool extension. These additions aim to improve understanding and usability of the library's pool-related features.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,3 +61,7 @@ harness = false
 [[bench]]
 name = "tick_math"
 harness = false
+
+[[example]]
+name = "from_pool_key_with_tick_data_provider"
+required-features = ["extensions"]
