fix: fix `v` in `self_permit` and add example
Introduced a new `self_permit` example to demonstrate signing ERC20 permits and encoding `selfPermit` calls for Uniswap V3. Improved encoding logic in `self_permit.rs` by adding EIP-712 signing hash functionality and fixing signature encoding with +27 adjustment. Updated version to 3.1.0 to reflect new functionality.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "uniswap-v3-sdk"
-version = "3.0.0"
+version = "3.1.0"
 edition = "2021"
 authors = ["Shuhui Luo <twitter.com/aureliano_law>"]
 description = "Uniswap V3 SDK for Rust"
@@ -67,4 +67,8 @@ required-features = ["extensions"]
 
 [[example]]
 name = "swap_router"
+required-features = ["extensions"]
+
+[[example]]
+name = "self_permit"
 required-features = ["extensions"]
