chore: add nonfungible position manager example
Introduce a new example demonstrating minting liquidity with the Uniswap Nonfungible Position Manager. Refactor transaction handling by replacing deprecated `register()` calls with `watch()` for better event monitoring. Adjust `get_erc20_state_overrides` to use provider references for improved API consistency.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,3 +72,7 @@ required-features = ["extensions"]
 [[example]]
 name = "self_permit"
 required-features = ["extensions"]
+
+[[example]]
+name = "nonfungible_position_manager"
+required-features = ["extensions"]
