--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "uniswap-v3-sdk"
-version = "3.6.0"
+version = "4.0.0-rc"
 edition = "2021"
 authors = ["Shuhui Luo <twitter.com/aureliano_law>"]
 description = "Uniswap V3 SDK for Rust"
@@ -20,22 +20,24 @@ alloy-primitives = { version = "0.8", default-features = false }
 alloy-sol-types = { version = "0.8", default-features = false }
 anyhow = { version = "1.0", optional = true }
 base64 = { version = "0.22", optional = true, default-features = false }
+bnum = "0.12.0"
 derive_more = { version = "2", default-features = false, features = ["deref", "from"] }
-num-bigint = { version = "0.4", default-features = false }
+fastnum = { version = "0.1.9", default-features = false, features = ["libm", "numtraits"] }
 num-integer = { version = "0.1", default-features = false }
 num-traits = { version = "0.2", default-features = false, features = ["libm"] }
-once_cell = { version = "1.20", default-features = false, features = ["critical-section"] }
+once_cell = { version = "1.20", optional = true, default-features = false, features = ["critical-section"] }
 regex = { version = "1.11", optional = true }
 serde_json = { version = "1.0", optional = true, default-features = false }
 thiserror = { version = "2", default-features = false }
 uniswap-lens = { version = "0.11.1", optional = true }
-uniswap-sdk-core = "3.5.0"
+uniswap-sdk-core = "4.0.0-rc"
 
 [features]
 default = []
 extensions = [
     "alloy",
     "base64",
+    "once_cell",
     "serde_json",
     "uniswap-lens"
 ]
@@ -61,6 +63,7 @@ std = [
 alloy = { version = "0.11", default-features = false, features = ["provider-anvil-node", "signer-local"] }
 criterion = "0.5.1"
 dotenv = "0.15.0"
+once_cell = "1.20"
 tokio = { version = "1.43", features = ["full"] }
 uniswap_v3_math = "0.5.3"
 
