--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ regex = { version = "1.11", optional = true }
 serde_json = { version = "1.0", optional = true, default-features = false }
 thiserror = { version = "2", default-features = false }
 uniswap-lens = { version = "0.11.1", optional = true }
-uniswap-sdk-core = "4.0.0-rc"
+uniswap-sdk-core = "4.0.0-rc1"
 
 [features]
 default = []
