--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -59,6 +59,8 @@ jobs:
             ${{ runner.os }}-cargo-registry-
       - name: Build
         run: cargo build
+      - name: Build with extensions
+        run: cargo build --features extensions
       - name: Run tests for core library
         run: cargo test
       - name: Run tests for std feature
