chore: update dependencies and refactor for no-std
Streamline dependencies and improve error handling by replacing generic with specific error types. Restructure feature flags (`parse_price`, `extensions`) to improve modularity and `no-std` compatibility. Bump SDK version to `3.6.0` and consolidate documentation for better clarity.

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -59,6 +59,8 @@ jobs:
             ${{ runner.os }}-cargo-registry-
       - name: Build
         run: cargo build
+      - name: Build with std feature
+        run: cargo build --features std
       - name: Build with extensions
         run: cargo build --features extensions
       - name: Run tests for core library
