--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "uniswap-v3-sdk"
-version = "3.5.1"
+version = "3.6.0"
 edition = "2021"
 authors = ["Shuhui Luo <twitter.com/aureliano_law>"]
 description = "Uniswap V3 SDK for Rust"
@@ -16,26 +16,46 @@ all-features = true
 
 [dependencies]
 alloy = { version = "0.11", optional = true, default-features = false, features = ["contract"] }
-alloy-primitives = "0.8"
-alloy-sol-types = "0.8"
+alloy-primitives = { version = "0.8", default-features = false }
+alloy-sol-types = { version = "0.8", default-features = false }
 anyhow = { version = "1.0", optional = true }
-base64 = { version = "0.22", optional = true }
-bigdecimal = "0.4.7"
-derive_more = { version = "1.0.0", features = ["deref", "from"] }
-num-bigint = "0.4"
-num-integer = "0.1"
-num-traits = "0.2"
-once_cell = "1.20"
+base64 = { version = "0.22", optional = true, default-features = false }
+derive_more = { version = "2", default-features = false, features = ["deref", "from"] }
+num-bigint = { version = "0.4", default-features = false }
+num-integer = { version = "0.1", default-features = false }
+num-traits = { version = "0.2", default-features = false, features = ["libm"] }
+once_cell = { version = "1.20", default-features = false, features = ["critical-section"] }
 regex = { version = "1.11", optional = true }
-serde_json = { version = "1.0", optional = true }
+serde_json = { version = "1.0", optional = true, default-features = false }
 thiserror = { version = "2", default-features = false }
 uniswap-lens = { version = "0.11.1", optional = true }
-uniswap-sdk-core = "3.4.0"
+uniswap-sdk-core = "3.5.0"
 
 [features]
 default = []
-extensions = ["alloy", "anyhow", "base64", "regex", "serde_json", "uniswap-lens"]
-std = ["alloy?/std", "thiserror/std", "uniswap-sdk-core/std", "uniswap-lens?/std"]
+extensions = [
+    "alloy",
+    "base64",
+    "serde_json",
+    "uniswap-lens"
+]
+parse_price = [
+    "anyhow",
+    "extensions",
+    "regex",
+    "std"
+]
+std = [
+    "alloy-sol-types/std",
+    "alloy?/std",
+    "base64?/std",
+    "derive_more/std",
+    "once_cell/std",
+    "serde_json?/std",
+    "thiserror/std",
+    "uniswap-lens?/std",
+    "uniswap-sdk-core/std"
+]
 
 [dev-dependencies]
 alloy = { version = "0.11", default-features = false, features = ["provider-anvil-node", "signer-local"] }
