--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ anyhow = { version = "1.0", optional = true }
 base64 = { version = "0.22", optional = true, default-features = false }
 bnum = "0.12.0"
 derive_more = { version = "2", default-features = false, features = ["deref", "from"] }
-fastnum = { version = "0.1.9", default-features = false, features = ["libm", "numtraits"] }
+fastnum = { version = "0.1.11", default-features = false, features = ["numtraits"] }
 num-integer = { version = "0.1", default-features = false }
 num-traits = { version = "0.2", default-features = false, features = ["libm"] }
 once_cell = { version = "1.20", optional = true, default-features = false, features = ["critical-section"] }
@@ -30,7 +30,7 @@ regex = { version = "1.11", optional = true }
 serde_json = { version = "1.0", optional = true, default-features = false }
 thiserror = { version = "2", default-features = false }
 uniswap-lens = { version = "0.11.1", optional = true }
-uniswap-sdk-core = "4.0.0-rc2"
+uniswap-sdk-core = "4.0.0-rc4"
 
 [features]
 default = []
@@ -52,6 +52,7 @@ std = [
     "alloy?/std",
     "base64?/std",
     "derive_more/std",
+    "fastnum/std",
     "once_cell/std",
     "serde_json?/std",
     "thiserror/std",
