refactor: loosen trait bound for `TickDataProvider`
Removed unnecessary `Clone` trait bound from multiple implementations and functions, streamlining the code where cloning wasn't needed. Updated tests and function signatures accordingly to ensure consistency. Also incremented the package version to reflect these changes.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,7 +53,7 @@ std = [
     "base64?/std",
     "derive_more/std",
     "fastnum/std",
-    "once_cell/std",
+    "once_cell?/std",
     "serde_json?/std",
     "thiserror/std",
     "uniswap-lens?/std",
