--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "uniswap-v3-sdk"
-version = "4.0.0-rc"
+version = "4.0.0-rc2"
 edition = "2021"
 authors = ["Shuhui Luo <twitter.com/aureliano_law>"]
 description = "Uniswap V3 SDK for Rust"
@@ -22,15 +22,14 @@ anyhow = { version = "1.0", optional = true }
 base64 = { version = "0.22", optional = true, default-features = false }
 bnum = "0.12.0"
 derive_more = { version = "2", default-features = false, features = ["deref", "from"] }
-fastnum = { version = "0.1.11", default-features = false, features = ["numtraits"] }
 num-integer = { version = "0.1", default-features = false }
 num-traits = { version = "0.2", default-features = false, features = ["libm"] }
 once_cell = { version = "1.20", optional = true, default-features = false, features = ["critical-section"] }
 regex = { version = "1.11", optional = true }
 serde_json = { version = "1.0", optional = true, default-features = false }
 thiserror = { version = "2", default-features = false }
-uniswap-lens = { version = "0.11.1", optional = true }
-uniswap-sdk-core = "4.0.0-rc4"
+uniswap-lens = { version = "0.11", optional = true }
+uniswap-sdk-core = "4.0.0-rc6"
 
 [features]
 default = []
@@ -52,7 +51,6 @@ std = [
     "alloy?/std",
     "base64?/std",
     "derive_more/std",
-    "fastnum/std",
     "once_cell?/std",
     "serde_json?/std",
     "thiserror/std",
@@ -61,12 +59,12 @@ std = [
 ]
 
 [dev-dependencies]
-alloy = { version = "0.11", default-features = false, features = ["provider-anvil-node", "signer-local"] }
+alloy = { version = "0.11", default-features = false, features = ["provider-anvil-node", "reqwest", "signer-local"] }
 criterion = "0.5.1"
 dotenv = "0.15.0"
 once_cell = "1.20"
 tokio = { version = "1.43", features = ["full"] }
-uniswap_v3_math = "0.5.3"
+uniswap_v3_math = "0.6.0"
 
 [[bench]]
 name = "bit_math"
