chore: refactor recipient assignment and update dependencies (#136)
Introduced `intermediate_recipient` to simplify recipient assignment logic, reducing redundancy in `swap_router.rs`. Updated dependencies in `Cargo.toml`, with version bumps for `uniswap-sdk-core`, `uniswap_v3_math`, and others. This also includes minor cleanups in import usage and feature definitions.

(cherry picked from commit 2dc929407706d9a1ef131688a75c48cfd824cbda)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,11 +58,11 @@ std = [
 ]
 
 [dev-dependencies]
-alloy = { version = "0.11", default-features = false, features = ["provider-anvil-node", "signer-local"] }
+alloy = { version = "0.11", default-features = false, features = ["provider-anvil-node", "reqwest", "signer-local"] }
 criterion = "0.5.1"
 dotenv = "0.15.0"
 tokio = { version = "1.43", features = ["full"] }
-uniswap_v3_math = "0.5.3"
+uniswap_v3_math = "0.6.0"
 
 [[bench]]
 name = "bit_math"
