--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "uniswap-v3-sdk"
-version = "4.0.0-rc3"
+version = "4.0.0"
 edition = "2021"
 authors = ["Shuhui Luo <twitter.com/aureliano_law>"]
 description = "Uniswap V3 SDK for Rust"
@@ -15,12 +15,11 @@ exclude = [".github", ".gitignore", "rustfmt.toml"]
 all-features = true
 
 [dependencies]
-alloy = { version = "0.11", optional = true, default-features = false, features = ["contract"] }
+alloy = { version = "0.12", optional = true, default-features = false, features = ["contract"] }
 alloy-primitives = { version = "0.8", default-features = false }
 alloy-sol-types = { version = "0.8", default-features = false }
 anyhow = { version = "1.0", optional = true }
 base64 = { version = "0.22", optional = true, default-features = false }
-bnum = "0.12.0"
 derive_more = { version = "2", default-features = false, features = ["deref", "from"] }
 num-integer = { version = "0.1", default-features = false }
 num-traits = { version = "0.2", default-features = false, features = ["libm"] }
@@ -28,8 +27,8 @@ once_cell = { version = "1.20", optional = true, default-features = false, featu
 regex = { version = "1.11", optional = true }
 serde_json = { version = "1.0", optional = true, default-features = false }
 thiserror = { version = "2", default-features = false }
-uniswap-lens = { version = "0.11", optional = true }
-uniswap-sdk-core = "4.0.0-rc6"
+uniswap-lens = { version = "0.12", optional = true }
+uniswap-sdk-core = "4.0.0"
 
 [features]
 default = []
@@ -59,7 +58,7 @@ std = [
 ]
 
 [dev-dependencies]
-alloy = { version = "0.11", default-features = false, features = ["provider-anvil-node", "reqwest", "signer-local"] }
+alloy = { version = "0.12", default-features = false, features = ["provider-anvil-node", "reqwest", "signer-local"] }
 criterion = "0.5.1"
 dotenv = "0.15.0"
 once_cell = "1.20"
