chore: set MSRV to 1.83 and add CI check for compliance
Documented the Minimum Supported Rust Version (MSRV) in the README and configured it in `Cargo.toml` and `clippy.toml`. Updated the CI workflow to include a new job for verifying compatibility with the MSRV and adjusted dependencies accordingly. Also ensured MSRV compliance as a prerequisite for tests.

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -5,10 +5,12 @@ on:
     branches:
       - master
   pull_request:
+  workflow_dispatch:
 
 env:
   CARGO_TERM_COLOR: always
   MAINNET_RPC_URL: ${{ secrets.MAINNET_RPC_URL }}
+  MSRV: 1.83
 
 jobs:
   lint:
@@ -38,8 +40,42 @@ jobs:
       - name: Check formatting
         run: cargo fmt --all -- --check
 
+  msrv:
+    name: Rust MSRV Check
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: recursive
+      - name: Cache Cargo registry
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-cargo-msrv-${{ env.MSRV }}-${{ hashFiles('**/Cargo.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-msrv-${{ env.MSRV }}-
+            ${{ runner.os }}-cargo-msrv-
+      - name: Install Rust ${{ env.MSRV }}
+        run: rustup install ${{ env.MSRV }} --profile minimal
+      - name: Verify MSRV version
+        run: cargo +${{ env.MSRV }} -V
+      - name: Build with MSRV
+        run: cargo +${{ env.MSRV }} build --all-features
+      - name: Run tests for core library
+        run: cargo +${{ env.MSRV }} test
+      - name: Run tests for std feature
+        run: cargo +${{ env.MSRV }} test --features std
+      - name: Run tests for extensions
+        run: cargo +${{ env.MSRV }} test --features extensions --lib extensions -- --test-threads=1
+      - name: Run doc tests
+        run: cargo +${{ env.MSRV }} test --doc --all-features
+
   test:
-    needs: lint
+    needs: [ lint, msrv ]
     name: Rust Tests
     runs-on: ubuntu-latest
     timeout-minutes: 30
