--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "uniswap-v3-sdk"
 version = "4.0.0"
 edition = "2021"
+rust-version = "1.83"
 authors = ["Shuhui Luo <twitter.com/aureliano_law>"]
 description = "Uniswap V3 SDK for Rust"
 license = "MIT"
