chore: set MSRV to 1.82 and add CI check for compliance
Documented the Minimum Supported Rust Version (MSRV) in the README and configured it in `Cargo.toml` and `clippy.toml`. Updated the CI workflow to include a new job for verifying compatibility with the MSRV and adjusted dependencies accordingly. Also ensured MSRV compliance as a prerequisite for tests.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "uniswap-v3-sdk"
 version = "3.7.0"
 edition = "2021"
+rust-version = "1.82"
 authors = ["Shuhui Luo <twitter.com/aureliano_law>"]
 description = "Uniswap V3 SDK for Rust"
 license = "MIT"
