fix: set default Rust version and clarify feature flag requirements
- Updated workflow to set Rust stable as the default version after installation for consistency in builds.
- Adjusted examples/README.md to clarify that the `std` feature must be explicitly enabled if needed.

--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -29,7 +29,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-cargo-registry-
       - name: Install Rust stable
-        run: rustup install stable --profile minimal
+        run: |
+          rustup install stable --profile minimal
+          rustup default stable
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
         with:
