--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ uniswap-lens = { version = "0.15", optional = true }
 uniswap-sdk-core = "5.2.0"
 
 [dev-dependencies]
-alloy = { version = "1.0.23", default-features = false, features = ["provider-anvil-node", "reqwest", "signer-local"] }
+alloy = { version = "1.0.23", default-features = false, features = ["provider-anvil-node", "reqwest-native-tls", "signer-local"] }
 criterion = "0.7"
 dotenv = "0.15.0"
 once_cell = "1.21"
